# file-upload

./: Cargo.toml  Cross.toml  README.md  build-all-platforms.js  index.js  package-lock.json  package.json
.cargo/: config.toml
src/: lib.rs  mount_s3.rs  upload_s3.rs
